SERVER-49320 only unconfigure the console when logging is fully configured